# NN

./: .gitignore  .gitlab-ci.yml  README.md  main  main.cpp
.github/workflows/: ci.yml
example/: main.cpp
include/: neural_network.hpp
include/learning/: loss.hpp  optimization.hpp
include/network/: activation.hpp  network.hpp
include/utility/: custom_concepts.hpp  debug.hpp  read_mnist.hpp
models/: MNIST_Sigmoid_4_Layers.out
test/: meson.build  tests.cpp
